# MGCRM

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml
examples/contracts/apps/api/: Dockerfile  alembic.ini  pyproject.toml
examples/contracts/apps/api/alembic/: env.py
examples/contracts/apps/api/alembic/versions/: 0001_initial.py  0002_user_avatar.py  0003_telegram_link_tokens.py  0004_routes_licensors_templates.py  0005_counterparty_contacts.py  0006_stages_and_bank_accounts.py  0007_revisions_remarks.py  0008_template_variables.py  0009_archive_reject_persist.py  0010_signed_attachments.py  0011_products_pricing.py  0012_client_categories.py  0013_crm_card.py  0014_deals_pipelines.py  0015_customer_success.py  0016_pipeline_kind.py  0017_counterparty_city.py  0018_leads.py  0019_contact_company.py  0020_activities.py  0021_template_categories.py  0022_pipeline_automation.py  0023_inbox_channels.py  0024_renewal_bulk.py  0025_sequences.py  0026_card2_extensions.py  0027_epic_4_2_fields.py  0028_ensure_one_admin_trigger.py  0029_counterparty_responsible_user.py  0030_api_tokens_webhooks.py  0031_onboarding_schema.py  0032_quiz_randomize_q.py  0033_webhook_settings.py  0034_saved_filter_order.py  0035_departments.py  0036_owner_dept_fields.py  0037_security_fields.py  0038_sso_links.py  0039_fts_gin_indexes.py  0040_dup_scan_jobs.py  (+68 more)
examples/contracts/apps/api/app/: config.py  db.py  deps.py  main.py  models.py  run_bot.py  schemas.py  schemas_finance.py  security.py
examples/contracts/apps/api/app/data/: products_seed.json  registry_import.tsv
examples/contracts/apps/api/scripts/: backfill_responsible_user.py  backfill_subscription_history.py  build_finance_docx.py  build_reference_docx.py  build_skeleton_docx.py  gcal_archive_mirror.py  gcal_remediate.py
examples/contracts/apps/api/tests/: test_2fa_endpoint_helpers.py  test_acl_hierarchy.py  test_activities.py  test_activity_bulk.py  test_activity_counts.py  test_activity_filters.py  test_activity_recurrence.py  test_activity_v2_status.py  test_admin_users_employees.py  test_ai_assistant.py  test_ai_chat.py  test_ai_features.py  test_analytics.py  test_analytics_deals.py  test_analytics_onboarding.py  test_approval_engine.py  test_auth_rate_limit.py  test_automation.py  test_automation_change_stage.py  test_automation_complete_tasks.py  test_automation_create_deal.py  test_automation_date_field_escalation.py  test_automation_date_scanner.py  test_automation_defer_network.py  test_automation_extensions.py  test_automation_idempotency.py  test_automation_session_local_regression.py  test_automation_set_tags.py  test_automation_webhook_admin.py  test_backend_fallback_fixes.py  test_branch_evaluation.py  test_bulk_reorder.py  test_call_trainer.py  test_calldown_parsers.py  test_card2.py  test_categories.py  test_channel_token_mask.py  test_cohort_analytics.py  test_company_cp_mirror.py  test_contacts_companies.py  (+96 more)
(+3829 files in other folders)
